--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@better-scroll/core": "^2.4.2",
     "axios": "^0.27.2",
+    "better-scroll": "^2.4.2",
     "core-js": "^3.8.3",
+    "less-loader": "^11.0.0",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
     "vuex": "^3.6.2"
